// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render + wrap non Flex children 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -7,14 +7,10 @@
      class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d css-uyw6h0"
      data-g2-c16t="true"
      data-g2-component="FlexItem"
    />
    <div
-     class="ic-192yz5d css-1nqjm19"
-   />
-   <div />
-   <div
      class="components-flex-item wp-components-flex-item components-flex-block wp-components-flex-block ic-1e1meti ic-1p3tlc8 ic-192yz5d css-2e3tg1"
      data-g2-c16t="true"
      data-g2-component="FlexBlock"
    />
  </div>
`;

exports[`props should render align 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -1,19 +1,19 @@
  Array [
    Object {
      "--wp-g2-flex-gap": "calc(var(--wp-g2-grid-base) * 2)",
      "-moz-osx-font-smoothing": "grayscale",
-     "-ms-flex-align": "flex-start",
+     "-ms-flex-align": "center",
      "-ms-flex-direction": "row",
      "-ms-flex-pack": "justify",
-     "-webkit-align-items": "flex-start",
-     "-webkit-box-align": "flex-start",
+     "-webkit-align-items": "center",
+     "-webkit-box-align": "center",
      "-webkit-box-pack": "justify",
      "-webkit-flex-direction": "row",
      "-webkit-font-smoothing": "antialiased",
      "-webkit-justify-content": "space-between",
-     "align-items": "flex-start",
+     "align-items": "center",
      "box-sizing": "border-box",
      "display": "flex",
      "flex-direction": "row",
      "font-family": "var(--wp-g2-font-family)",
      "font-size": "var(--wp-g2-font-size)",
`;

exports[`props should render correctly 1`] = `
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 2);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

@media (prefers-reduced-motion) {
  .emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
  -webkit-transition: none !important;
  transition: none !important;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 > * + *:not(marquee) {
  margin-left: calc(4px * 2);
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 > * {
  min-width: 0;
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none !important;
  transition: none !important;
}

.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (prefers-reduced-motion) {
  .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  -webkit-transition: none !important;
  transition: none !important;
}

<div
  class="components-flex wp-components-flex ic-17cs4ki ic-192yz5d emotion-2"
  data-g2-c16t="true"
  data-g2-component="Flex"
>
  <div
    class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d emotion-0"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  />
  <div
    class="components-flex-item wp-components-flex-item components-flex-block wp-components-flex-block ic-1e1meti ic-1p3tlc8 ic-192yz5d emotion-1"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  />
</div>
`;

exports[`props should render justify 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -2,24 +2,24 @@
    Object {
      "--wp-g2-flex-gap": "calc(var(--wp-g2-grid-base) * 2)",
      "-moz-osx-font-smoothing": "grayscale",
      "-ms-flex-align": "center",
      "-ms-flex-direction": "row",
-     "-ms-flex-pack": "start",
+     "-ms-flex-pack": "justify",
      "-webkit-align-items": "center",
      "-webkit-box-align": "center",
-     "-webkit-box-pack": "start",
+     "-webkit-box-pack": "justify",
      "-webkit-flex-direction": "row",
      "-webkit-font-smoothing": "antialiased",
-     "-webkit-justify-content": "flex-start",
+     "-webkit-justify-content": "space-between",
      "align-items": "center",
      "box-sizing": "border-box",
      "display": "flex",
      "flex-direction": "row",
      "font-family": "var(--wp-g2-font-family)",
      "font-size": "var(--wp-g2-font-size)",
      "font-weight": "var(--wp-g2-font-weight)",
-     "justify-content": "flex-start",
+     "justify-content": "space-between",
      "margin": "0",
      "width": "100%",
    },
  ]
`;

exports[`props should render spacing 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -1,8 +1,8 @@
  Array [
    Object {
-     "--wp-g2-flex-gap": "calc(var(--wp-g2-grid-base) * 5)",
+     "--wp-g2-flex-gap": "calc(var(--wp-g2-grid-base) * 2)",
      "-moz-osx-font-smoothing": "grayscale",
      "-ms-flex-align": "center",
      "-ms-flex-direction": "row",
      "-ms-flex-pack": "justify",
      "-webkit-align-items": "center",
`;
